@@ -1,55 +1,76 @@
 /**
-	\file "art_object_module.cc"
+	\file "Object/art_object_module.cc"
 	Method definitions for module class.  
- 	$Id: art_object_module.cc,v 1.14 2005/01/28 19:58:44 fang Exp $
+ 	$Id: art_object_module.cc,v 1.22.10.1 2005/06/25 01:13:53 fang Exp $
  */
 
-#ifndef	__ART_OBJECT_MODULE_CC__
-#define	__ART_OBJECT_MODULE_CC__
+#ifndef	__OBJECT_ART_OBJECT_MODULE_CC__
+#define	__OBJECT_ART_OBJECT_MODULE_CC__
 
+// code debugging switches
 #define	ENABLE_STACKTRACE		0
+#define	STACKTRACE_DESTRUCTORS		0 && ENABLE_STACKTRACE
+#define	STACKTRACE_PERSISTENTS		0 && ENABLE_STACKTRACE
 
 #include <iostream>
-#include "art_object_module.h"
-#include "art_object_namespace.h"
-#include "persistent_object_manager.tcc"
-#include "art_object_type_hash.h"
-#include "stacktrace.h"
+#include "Object/art_object_module.h"
+#include "Object/art_object_namespace.h"
+#include "Object/art_object_unroll_context.h"
+#include "util/persistent_object_manager.tcc"
+#include "Object/art_object_type_hash.h"
+#include "util/stacktrace.h"
+
+// conditional defines, after including "stacktrace.h"
+#if STACKTRACE_DESTRUCTORS
+	#define	STACKTRACE_DTOR(x)		STACKTRACE(x)
+#else
+	#define	STACKTRACE_DTOR(x)
+#endif
+
+#if STACKTRACE_PERSISTENTS
+	#define	STACKTRACE_PERSISTENT(x)	STACKTRACE(x)
+#else
+	#define	STACKTRACE_PERSISTENT(x)
+#endif
+
+namespace util {
+SPECIALIZE_PERSISTENT_TRAITS_FULL_DEFINITION(
+	ART::entity::module, MODULE_TYPE_KEY, 0)
+}	// end namespace util
 
 namespace ART {
 namespace entity {
-#include "using_ostream.h"
+#include "util/using_ostream.h"
 using std::istream;
 using util::write_value;
 using util::read_value;
 using util::write_string;
 using util::read_string;
 USING_STACKTRACE
+using util::persistent_traits;
 
 //=============================================================================
 // class module method definitions
-
-DEFAULT_PERSISTENT_TYPE_REGISTRATION(module, MODULE_TYPE_KEY)
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /**
 	Private empty constructor.
  */
 module::module() :
-		object(), persistent(), sequential_scope(),
+		persistent(), sequential_scope(),
 		name(""), global_namespace(NULL), unrolled(false) {
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 module::module(const string& s) :
-		object(), persistent(), sequential_scope(),
+		persistent(), sequential_scope(),
 		name(s), global_namespace(new name_space("")), unrolled(false) {
 	NEVER_NULL(global_namespace);
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 module::~module() {
-	STACKTRACE("~module()");
+	STACKTRACE_DTOR("~module()");
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -63,6 +84,18 @@ void
 module::set_global_namespace(excl_ptr<name_space>& n) {
 	// automatically memory-managed
 	global_namespace = n;
+}
+
+//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
+/**
+	\param l the list in which to accumulate collection of 
+		pointers to namespaces.  
+ */
+void
+module::collect_namespaces(namespace_collection_type& l) const {
+	INVARIANT(global_namespace);
+	l.push_back(global_namespace);
+	global_namespace->collect_namespaces(l);
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
@@ -92,29 +125,41 @@ module::dump(ostream& o) const {
 	Don't just call sequential_scope::unroll, this makes sure
 	entire module is not already unrolled.  
  */
-void
+good_bool
 module::unroll_module(void) {
+	STACKTRACE("module::unroll_module()");
 	if (!unrolled) {
-		sequential_scope::unroll();
+		STACKTRACE("not already unrolled, unrolling...");
+		// start with blank context
+		unroll_context c;
+#if 0
+		sequential_scope::unroll(c);
+#else
+		// three-phase unrolling
+		if (!sequential_scope::unroll_meta_evaluate(c).good) {
+			cerr << "Error during unroll_meta_evaluate." << endl;
+			return good_bool(false);
+		}
+		if (!sequential_scope::unroll_meta_instantiate(c).good) {
+			cerr << "Error during unroll_meta_instantiate." << endl;
+			return good_bool(false);
+		}
+		if (!sequential_scope::unroll_meta_connect(c).good) {
+			cerr << "Error during unroll_meta_connect." << endl;
+			return good_bool(false);
+		}
+#endif
 		unrolled = true;
 	}
-}
-
-//- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
-/**
-	Default empty constructor.  
-	Not really used, because module will be stack allocated.  
- */
-persistent*
-module::construct_empty(const int i) {
-	return new module();
+	return good_bool(true);
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void
 module::collect_transient_info(persistent_object_manager& m) const {
-if (!m.register_transient_object(this, MODULE_TYPE_KEY)) {
-	STACKTRACE("module::collect_transient_info()");
+if (!m.register_transient_object(this, 
+		persistent_traits<this_type>::type_key)) {
+	STACKTRACE_PERSISTENT("module::collect_transient_info()");
 	global_namespace->collect_transient_info(m);
 	// the list itself is a statically allocated member
 	sequential_scope::collect_transient_info_base(m);
@@ -124,38 +169,35 @@ if (!m.register_transient_object(this, MODULE_TYPE_KEY)) {
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void
-module::write_object(const persistent_object_manager& m) const {
-	STACKTRACE("module::write_object()");
-	ostream& f = m.lookup_write_buffer(this);
-	INVARIANT(f.good());
-	WRITE_POINTER_INDEX(f, m);
+module::write_object(const persistent_object_manager& m, ostream& f) const {
+	STACKTRACE_PERSISTENT("module::write_object()");
 	write_string(f, name);
 	m.write_pointer(f, global_namespace);
 	write_value(f, unrolled);
 	sequential_scope::write_object_base(m, f);
-	WRITE_OBJECT_FOOTER(f);
 }
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 void
-module::load_object(persistent_object_manager& m) {
-if (!m.flag_visit(this)) {
-	STACKTRACE("module::load_object()");
-	istream& f = m.lookup_read_buffer(this);
-	INVARIANT(f.good());
-	STRIP_POINTER_INDEX(f, m);
+module::load_object(const persistent_object_manager& m, istream& f) {
+	STACKTRACE_PERSISTENT("module::load_object()");
 	read_string(f, name);
 	m.read_pointer(f, global_namespace);
 	read_value(f, unrolled);
 //	global_namespace->load_object(m);	// not necessary
 	sequential_scope::load_object_base(m, f);
-	STRIP_OBJECT_FOOTER(f);
-}
 }
 
 //=============================================================================
 }	// end namespace entity
 }	// end namespace ART
 
-#endif	// __ART_OBJECT_MODULE_CC__
+// clean up macros used in this module
+#undef	ENABLE_STACKTRACE
+#undef	STACKTRACE_DESTRUCTORS
+#undef	STACKTRACE_DTOR
+#undef	STACKTRACE_PERSISTENTS
+#undef	STACKTRACE_PERSISTENT
+
+#endif	// __OBJECT_ART_OBJECT_MODULE_CC__
 
