@@ -1,16 +1,16 @@
 /**
-	\file "art_object_module.h"
+	\file "Object/art_object_module.h"
 	Classes that represent a single compilation module, a file.  
-	$Id: art_object_module.h,v 1.11 2005/01/28 19:58:44 fang Exp $
+	$Id: art_object_module.h,v 1.18.4.1 2005/06/25 01:13:54 fang Exp $
  */
 
-#ifndef	__ART_OBJECT_MODULE_H__
-#define	__ART_OBJECT_MODULE_H__
+#ifndef	__OBJECT_ART_OBJECT_MODULE_H__
+#define	__OBJECT_ART_OBJECT_MODULE_H__
 
 #include <string>
-#include "art_object_base.h"
-#include "art_object_instance_management_base.h"
-#include "persistent.h"
+#include "Object/art_object_util_types.h"
+#include "Object/art_object_instance_management_base.h"
+#include "util/persistent.h"
 
 namespace ART {
 namespace entity {
@@ -27,16 +27,9 @@ using util::persistent_object_manager;
 	1) order-independent data
 	2) source-order-dependent data
  */
-class module :
-	public object, public persistent
-#if 0
-	// changing this to private or protected crashes on darwin-gcc-3.3!?
-	, private sequential_scope
-#else
-	, public sequential_scope
-#endif
-	{
+class module : public persistent, public sequential_scope {
 friend class context;
+	typedef	module				this_type;
 protected:
 	/**
 		Name of the file.
@@ -59,7 +52,9 @@ protected:
 private:
 	module();
 public:
-explicit	module(const string& s);
+	explicit
+	module(const string& s);
+
 	~module();
 	// operations: merge, diff?
 
@@ -68,6 +63,13 @@ explicit	module(const string& s);
 
 	void
 	set_global_namespace(excl_ptr<name_space>& n);
+
+	void
+	collect_namespaces(namespace_collection_type&) const;
+
+	template <class L>
+	void
+	collect(L&) const;
 
 	ostream&
 	what(ostream& o) const;
@@ -83,11 +85,12 @@ explicit	module(const string& s);
 		and is non-virtual.  
 		Protected-ness keep user from accessing parent's unroll().
 	 */
-	void
+	good_bool
 	unroll_module(void);
 
 public:
-	PERSISTENT_METHODS
+	FRIEND_PERSISTENT_TRAITS
+	PERSISTENT_METHODS_DECLARATIONS
 
 };	// end class module
 
@@ -101,6 +104,7 @@ public:
 	Need a better name for this guy...
  */
 class multi_module : public sequential_scope {
+	typedef	multi_module		this_type;
 protected:
 	// set of file/module names?
 
@@ -120,5 +124,5 @@ public:
 }	// end namespace entity
 }	// end namespace ART
 
-#endif	//	__ART_OBJECT_MODULE_H__
+#endif	//	__OBJECT_ART_OBJECT_MODULE_H__
 
